syntax = "proto2";

package core.circuits;

message Gate {
    enum GateType {
        XOR = 0;
        AND = 1;
        INV = 2;
    }
    required uint32 id = 1;
    required uint32 level = 2;
    required uint32 xref = 3;
    required uint32 yref = 4;
    required uint32 zref = 5;
    required GateType gate_type = 6;
}

message Circuit {
    required string name = 1;
    required string version = 2;
    required uint32 ngates = 3;
    required uint32 nwires = 4;
    required uint32 ninputs = 5;
    repeated uint32 input_nwires = 6;
    required uint32 ninput_wires = 7;
    required uint32 noutput_wires = 8;
    repeated Gate gates = 9;
    required uint32 nand = 10;
    required uint32 nxor = 11;
}