syntax = "proto2";

import "core.proto";

package core.garble;

// Input label of garbled circuit
message InputLabel {
    // Input wire label id
    required uint32 id = 1;
    // Input wire label
    required core.Block label = 2;
}

// Garbled Circuit Data
message GarbledCircuit {
    // Public wire labels corresponding to low and high bits
    required core.LabelPair public_labels = 1;
    // Generator's wire labels corresponding to their input bits
    repeated InputLabel generator_input_labels = 2;
    // Truth table for garbled AND gates
    required bytes table = 3;
    // LSB of each outputs low wire label
    repeated bool output_bits = 4;
}